--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
   <strong>Name:</strong>
   <%= @actor.name %>
 </p>
-
 <p>
-  <strong>Age:</strong>
+  <strong>Age:</strong> 
   <%= @actor.age %>
 </p>
 
@@ -15,5 +15,17 @@
   <%= @actor.origin %>
 </p>
 
+
+<p>
+  <strong>Movies:</strong>
+<ul> 
+   <% @actor.movies.each { | movie | %> 
+     <li><%=  movie %></li>  
+  <%} %>
+</ul>
+</p>
+</ul>
+
+   
 <%= link_to 'Edit', edit_actor_path(@actor) %> |
 <%= link_to 'Back', actors_path %>
