--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -15,5 +15,26 @@
   <%= @movie.rating %>
 </p>
 
+
+<p>
+  <strong>Actors:</strong>
+<ul> 
+   <% @movie.actors.each { | actor | %> 
+     <li><%=  actor %></li>  
+  <%} %>
+</ul>
+</p>
+</ul>
+
+
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
 <%= link_to 'Back', movies_path %>
+
+
+
+
+
+
+
+
+
