--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -19,10 +19,24 @@
     <%= f.label :year %><br>
     <%= f.number_field :year %>
   </div>
-  <div class="field">
+  
+  <!-- Salim Editing: trying to do dropdown menu -->
+  
     <%= f.label :rating %><br>
-    <%= f.text_field :rating %>
-  </div>
+  <div class="field">
+ 
+  <div class="field" input type="dropdown"> 
+    <select name="SalimRating" <br>>
+      <option value="PG-13">PG-13</option>
+      <option value="X-">X-Rated</option>
+      <option value="PG-18">PG-18</option>
+      <option value="SalimTest">Tesst</option>
+    </select> <br>
+ </div> 
+  
+
+
+ 
   <div class="actions">
     <%= f.submit %>
   </div>
